--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <form>
     <input id="typing" type="text">
-    <input type="submit">
+    <input id="yo" type="submit">
   </form>
   <div></div>
 
